fix avatar misalignment in quotes block (#1079)
* fix avatar misalignment in quotes block

* css changes to vertical align avatar and text

--- a/express/blocks/quotes/quotes.css
+++ b/express/blocks/quotes/quotes.css
@@ -23,6 +23,18 @@ main .quotes .quote .content {
   flex-grow: 1;
 }
 
+main .quotes .quote .author .author-content {
+  display: flex;
+  align-items: center;
+}
+
+main .quotes .quote .author .summary {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 main .quotes .quote .content::before {
   content: "“";
   display: block;
